# ecommerce-api

./: .coverage  .env.example  .env.railway.example  Dockerfile  E-Commerce API.postman_collection.json  Procfile  README.md  TODO.md  docker-compose.yml  ecommerce.db  postman_collection.json  pyproject.toml  railway.json  requirements.txt
scripts/: __init__.py  create_admin.py
src/: auth.py  cache.py  database.py  health.py  main.py  middleware.py  models.py  rate_limit.py  schemas.py
src/api/routers/: auth.py  external.py  frontend.py  health.py  listings.py  users.py
src/core/: config.py  database.py  exceptions.py
src/models/: models.py
src/routers/: auth.py  listings.py  users.py
src/schemas/: schemas.py
src/services/: auth.py  cache.py  rate_limit.py
src/static/css/: style.css
src/static/js/: main.js
src/templates/: base.html  index.html  random_user.html
src/templates/auth/: login.html  register.html
src/templates/listings/: detail.html  form.html  list.html
src/templates/users/: list.html  profile.html
tests/: conftest.py  test_auth.py  test_cache.py  test_external.py  test_health.py  test_listings.py  test_rate_limit.py  test_users.py
